app/assets/stylesheets/surety.less
h2 + table,
h3 + table,
h4 + table,
h2 + .row {
  margin-top: 5px;
}

body {
  padding-top: 5px;
}

#footer {
  border-top: 1px solid #E5E5E5;
  padding-top: 1em;
}

.collapse-header {
  cursor: pointer;
  border-bottom: 1px dashed;
  display: inline-block;
}

.hidden {
  display: none !important;
}

.navbar .brand {
  font-weight: 400;
  position: relative;
  top: -1px;
}

p.name {
  font-size: 16px;
}

div.avatar {
  padding: 10px;
  border: 2px solid #eee;
  text-align: center;
  
  img {
    max-width: 116px;
  }
}


#surety {
	width: 600px;
	.right {
  	text-align: right;
  }
  .center {
  	text-align: center;
  }
  
  > div {
    padding: 30px 0;
  }
  
  dl {
    padding-left: 40px;
  }
  dt {
    font-weight: normal;
    float: left;
    margin-right: 10px;
  }
  dd {
    margin-left: 40px;
    ul {
      margin: 0;
      clear: both;
    }
  }
  ul {
    list-style: none;
    margin-left: 40px;
  }
  .relative {
    position: relative;
  }
  .stamp {
    position: absolute;
    right: 0;
    text-align: center;
    padding-top: 1em;
  }
}

blockquote small.reply {
  margin-top: 5px;
  &::before {
    content: '';
  }
}

blockquote.admin {
  font-style: italic;
}

footer {
  margin-top: 40px;
  padding: 40px 0;
}

.link-actions {
  padding: 17px 20px 18px;
  margin-top: 18px;
  margin-bottom: 18px;
  background-color: #f5f5f5;
  *zoom: 1;
  
  .btn {
    padding: 2px 10px;
    font-size: 12px;
  }
}

textarea.code {
  font-family: monospace;
}

li.highlight > a {
  font-weight: bold;
}

#ticket_template {
  margin-left: 160px;
}

span.inline-checkbox {
  label {
    display: inline-block;
    padding: 2px 10px 0 5px;
  }
}

div.toggle-box {
  > div.toggle {
    cursor: pointer;
    padding: 5px 10px;
    display: inline-block;
    background-color: #eee;
    margin-bottom: 5px;
  }
  > div.object {
    display: none;
  }
}

img.preview {
  max-width: 300px;
  max-height: 300px;
}
.alert h5 {
  margin-top: 0;
}

.relative {
  position: relative;
}

#help {
  position: absolute;
  top: 0;
  right: 0;
  z-index: 100;
  width: 220px;
  ul {
    margin: 0;
  }
}

.group:before, .group:after {
  content: "";
  display: table;
}
.group:after {
  clear: both;
}

.remove-form-item {
  label.control-label {
    float: none !important;
    display: inline-block;
    text-align: left !important;
    position: relative;
    top: -4px;
  }
  div.control-group {
    margin-bottom: 0px !important;
    position: relative;
    top: -15px;
  }
  div.controls {
    float: left;
  }
}

a.danger {
  color: #DA4F49;
}

.state-closed {
  color: gray;
}

li {
  .actions {
    padding-left: 16px;
  }
}

div.scan {
  margin-bottom: 20px;
}

div.soul-box {
  padding: 10px 0;
  text-align: center;
  a {
    &:before {
      content: "> ";
    }
    &:after {
      content: " <";
    }
  }
}

.alert .form-actions {
  background: none;
}

.select2-container {
  min-width: 320px;
}

.select-all {
  display: block;
  font-size: 12px;
}


.nav-tabs {
  border-bottom: 2px solid #aaa;
}

.nav-tabs > li {
  margin-bottom: -2px;
}

.nav-tabs > li > a {
  border: 2px solid transparent;
}

.nav-tabs > li > a:hover {
  border-color: #eeeeee #eeeeee #aaaaaa;
}

.nav-tabs > .active > a,
.nav-tabs > .active > a:hover {
  border: 2px solid #aaa;
  border-bottom-color: transparent;
}

td.date {
  white-space: nowrap;
}

.remove-member {
  font-size: 20px;
  position: relative;
  top: 2px;
  font-weight: bold;
  left: 5px;
  &:hover {
    color: red;
    text-decoration: none;
  }
}

.report-form {
  .control-label {
    width: 190px;
  }
  .controls {
    margin-left: 210px;
  }
  .no-extra-margin {
    .control-label {
      width: 140px;
    }
    .controls {
      margin-left: 160px;
    }
  }
  .nocontrol {
    padding-left: 190px;
    .controls {
      margin-left: 0;
    }
  }
}

#top-menu {
  .dropdown {
    display: none;
  }
}

.wrap-inline {
  margin: 0 !important;
  .controls {
    margin: 0 !important;
  }
  div {
    display: inline;
  }
}

table.table td table.table:last-child { margin-bottom: 0; }

#print-me {
  display: none;
}

form.alert {
  .form-actions {
    margin-bottom: 0;
  }
}

#left-menu {
  top: 10px;
}

#directions_of_science_count_by_msu_subdivistions_bar {
  width: 2000px;
  overflow-x: scroll;
}

#critical_technologies_by_count_by_msu_subdivistions_bar,
#areas_by_count_by_msu_subdivistions_bar {
  width: 6000px;
  overflow-x: scroll;
}

